@@ -1,6 +1,11 @@
 2019-12-20  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2019-11-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/92695
+	* g++.dg/warn/inline3.C: New test.
+
 	2019-11-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR fortran/91944
